--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 <head>
+	<meta charset="utf-8">
 	<title>index</title>
+	<meta name="viewport" content="width=devide-width,initial-scale=1">
+	<link rel="stylesheet"  href="style.css">
 </head>
-<body>
-hello world
-
+<body bgcolor="adcdcaaa">
+family
+<div class="parent">
+	<div class="childone">
+		<p><img src="C:\Users\DELL\Desktop\demo\img.jpg"  width="120" height="120">
+		<font color="violet" size="20" style="vardana">lisa</font>
+		<H2> PHONE NO. 8232564841</H2>
+		<a href="https://mail.google.com/mail/u/0/#inbox">gmail</a>
+	</div>
+	<div class="childtwo"> 
+	<p><img src="C:\Users\DELL\Desktop\demo\pho.jpg" width="150" height="150">
+		<u><b><i><font color="purple" size="15" style="newyorktimes">elice</font></p>
+	 </div>
+</div>
 </body>
 </html>
