--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@ family
 		<H2> PHONE NO. 8232564841</H2>
 		<a href="https://mail.google.com/mail/u/0/#inbox">gmail</a>
 	</div>
+
+
+
+
+
 	<div class="childtwo"> 
 	<p><img src="pho.jpg" width="150" height="150">
-		<u><b><i><font color="purple" size="15" style="newyorktimes">elice</font></p>
+		<u><b><i><font color="purple" size="15" style="newyorktimes">navya</font></p>
 	 </div>
 </div>
 <script type="text/javascript" src="main.js"></script>
