--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ family
 <div class="parent">
 	<div class="childone">
 		<p><img src="img.jpg"  width="120" height="120">
-		<font color="violet" size="20" style="vardana">lisa</font>
+		<font color="violet" size="20" style="vardana">CHILD ONE</font>
 		<H2> PHONE NO. 8232564841</H2>
-		<a href="https://mail.google.com/mail/u/0/#inbox">gmail</a>
+		<a href="https://mail.google.com/mail/">gmail</a>
 	</div>
 
 
@@ -21,8 +21,8 @@ family
 
 
 	<div class="childtwo"> 
-	<p><img src="pho.jpg" width="150" height="150">
-		<u><b><i><font color="purple" size="15" style="newyorktimes">navya</font></p>
+	<p><img src="img.jpg" width="150" height="150">
+		<u><b><i><font color="purple" size="15" style="newyorktimes">CHILD TWO</font></p>
 	 </div>
 </div>
 <script type="text/javascript" src="main.js"></script>
